--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
           <input type="text" id="song" name="song" required placeholder="e.g., Imagine">
         </label>
         <label>
-          Artist
-          <input type="text" id="artist" name="artist" required placeholder="e.g., John Lennon">
-        </label>
-        <label>
-          Lyric
-          <textarea id="lyric" name="lyric" required placeholder="Paste the lyric here"></textarea>
+          Paste lyrics (with artist info)
+          <textarea id="lyrics" name="lyrics" required placeholder="Paste lyrics here, including artist if available"></textarea>
         </label>
         <label>
           How does it make you feel?
