--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>vibestho</title>
-  <!-- Firebase scripts -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>vibestho</h1>
     <p>Welcome to the vibestho app!</p>
-    <div id="userSection">
-      <button id="signInBtn">Sign in with Google</button>
-      <span id="userInfo" style="display:none;">
-        Signed in as <span id="userName"></span>
-        <button id="signOutBtn">Sign out</button>
-      </span>
-    </div>
   </header>
   <main>
-    <section class="lyric-form-section" id="formSection" style="display:none;">
+    <section class="lyric-form-section" id="formSection">
       <h2>Share how a lyric makes you feel</h2>
       <form id="lyricForm" autocomplete="off">
         <label>
@@ -40,12 +30,9 @@
         <button type="submit">Add Entry</button>
       </form>
     </section>
-    <section id="entriesSection" style="display:none;">
+    <section id="entriesSection">
       <h2>Lyric Feels Gallery</h2>
       <div id="entries"></div>
-    </section>
-    <section id="pleaseSignIn" style="text-align:center; color:#ff9800; font-size:1.2rem; margin:3rem 0; display:none;">
-      Please sign in to submit and view lyric entries.
     </section>
   </main>
   <footer>
